--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   font-family: "Jost", sans-serif;
+  box-sizing: border-box;
 }
 .navbar{
   display: flex;
@@ -72,20 +73,21 @@
   width: 50%;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  padding:7% 0 0 15%;
+  align-items: center;
+  justify-content: center;
 }
 .hi{
   display: flex;
   font-weight: 100;
-  font-size: 15px;
+  font-size: 1rem;
+  color: #606060;
 }
 .name{
-  font-size: 80px;
+  font-size: 4.5em;
 }
 .typewrite{
   text-decoration: none;
-  font-size: 40px;
+  font-size: 2.2rem;
   color: hsl(24, 100%, 50%);
   font-weight: 900;
 
@@ -96,10 +98,10 @@
 }
 .resume-download{
   padding: 20px;
-  font-size: 20px;
+  font-size: 1rem;
   font-weight: 700;
   color: white;
-  background-color: hsl(24, 100%, 50%);
+  background-color: #ff6600;
   border: none;
   border-radius: 10px;
   margin-top: 40px;
@@ -113,13 +115,165 @@
 .home-img{
   width: 50%;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: flex-start;
 }
 .home-img img{
-  width: 60%;
-  border-radius: 10%;
-  filter: saturate(150%);
+  width: 75%;
+  border-radius: 50%;
   box-shadow: 2px 2px 10px black;
   margin-top: 30px;
-}
+  }
+
+  @media (max-width:1080px){
+    .hi{
+      font-size: 15px;
+    }
+    .name{
+      font-size: 55px;
+    }
+    .typewrite{
+      font-size: 25px;
+    }
+    .home-img{
+      align-items: center;
+    }
+    .resume-download{
+      padding: 10px;
+      font-size: 15px;
+      margin-top: 20px;
+    }
+  }
+  @media (max-width:750px){
+    .home{
+      flex-direction: column-reverse;
+      justify-content: space-around;
+    }
+    .home-img, .home-text{
+      width: 100%;
+    }
+    .home-img img{
+      width: 18rem;
+    }
+    .hi{
+      font-size: 13px;
+    }
+    .name{
+      font-size: 45px;
+    }
+    .typewrite{
+      font-size: 20px;
+    }
+  }
+
+
+  /* About page styles */
+  .about-container{
+    width: 100%;
+    background-color: white;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    margin: 9rem 0px;
+  }
+  .about-img{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .about-img img{
+    width: 470px;
+    height: 100vh;
+    filter: brightness(110%);
+    border-radius: 10px;
+  }
+  .about-text{
+    width: 50%;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: justify;
+    padding: 0 50px 0 0;
+    font-size: 20px;
+  }
+  .about-heading{
+    display: flex;
+    color: #606060;
+  }
+  .heading-about{
+    padding: 2rem 0;
+    font-weight: 800;
+  }
+  .about-paragraph{
+    color: #606060;
+    font-size: 1rem;
+  }
+  .projects-experience{
+    display: flex;
+    width: 100%;
+    margin-top: 2rem;
+  }
+  .project, .experience{
+    display: flex;
+    margin: 10px;
+    width: 40%;
+    font-size: 0.8rem;
+    align-items: center;
+    justify-content: space-around;
+  }
+  .project img, .experience img{
+    width: 4rem;
+  }
+  .project span, .experience span{
+    color: #ff6600;
+   }
+   .about-points{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    margin-top: 2rem;
+   }
+   .about-point{
+    display: flex;
+    margin: 0.5rem 2rem;
+    color: #606060;
+    font-size: 1rem;
+   }
+   .check{
+    margin-right: 0.6rem;
+    color: #ff6600;
+   }
+
+   @media (max-width:960px){
+    .about-container{
+      flex-direction: column;
+      margin: 4rem 0rem;      
+    }
+    .about-img{
+     display: none;
+    }
+    .about-text{
+      width: 100%;
+      padding: 0 20px;
+    }
+    .about-container h1{
+      font-size: 1.5rem;
+    }
+    
+  .projects-experience{
+    flex-direction: column;
+  }
+  .project, .experience{
+    width: 100%;
+    font-size: 0.8rem;
+    justify-content: left;
+  }
+  .project img, .experience img{
+    width: 2rem;
+  }
+  .about-point{
+    display: flex;
+    margin: 0.5rem 1rem;
+    color: #606060;
+    font-size: 1rem;
+   }
+   }
