--- a/styles.css
+++ b/styles.css
@@ -277,3 +277,89 @@
     font-size: 1rem;
    }
    }
+
+   .services{
+    display: grid;
+    justify-items: center;
+   }
+   .services-heading{
+    display: flex;
+    justify-content: center;
+    color: #606060;
+    width: 100%;
+   }
+   .services-heading img{
+    height: 1.2rem;
+  }
+   .services-i-offer{
+    text-align: center;
+    padding-top: 1rem;
+    font-size: 2.5rem;
+    font-weight: 900;
+   }
+.services-container{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+}
+.service{
+  height: 250px;
+  width: 270px;
+  border: 1px solid #ff660053;
+  display: block;
+  display: grid;
+  align-content: center;
+  justify-items: center;
+  padding: 1rem;
+  margin: 1rem;
+  border-radius: 3%;
+}
+.service:hover{
+  background-color: rgba(255,244,235,255);
+}
+.service i{
+  color: #ff6600;
+  font-size: 4rem;
+  margin-bottom: 1.4rem;
+}
+.service h3{
+  margin-bottom: 1.4rem;
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+.service p{
+  text-align: center;
+  color: #606060;
+}
+
+@media (max-width:920px){
+.services-container{
+  grid-template-columns: repeat(2,1fr);
+}
+}
+@media (max-width:610px){
+.services-i-offer{
+  font-size: 1.6rem;
+}
+.service i{
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+.service h3{
+  margin-bottom: 0.5rem;
+  font-size: 0.8rem;
+}
+.service p{
+  text-align: center;
+  color: #606060;
+  font-size: 0.7rem;
+}
+.service{
+  height: 150px;
+  width: 170px;
+  padding: 0.3rem;
+  margin: 0.3rem;
+}
+.services{
+  margin-top: 25rem;
+ }
+}
